practice_examples/security-policy/gatekeeper/k8srequiredsignatures-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredsignatures
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredSignatures
      validation:
        openAPIV3Schema:
          properties:
            trustedRegistries:
              type: array
              items:
                type: string
            requireAnnotation:
              type: boolean
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredsignatures

        violation[{
          "msg": msg,
          "details": {
            "image": img,
          }
        }] {
          input.review.kind.kind == "Pod"
          container := input.review.object.spec.containers[_]
          img := container.image
          not trusted(img)
          require_annotation := input.parameters.requireAnnotation
          not (require_annotation == false)
          not has_cosign_annotation(container)
          msg := sprintf("image %s is not trusted or signed", [img])
        }

        trusted(img) {
          some prefix
          prefix := input.parameters.trustedRegistries[_]
          startswith(img, prefix)
        }

        has_cosign_annotation(container) {
          ann := container.annotations
          ann["cosign.sigstore.dev/signature"] != ""
        }
